# Perceiver-diffusion-autoencoder

./: .gitignore  Galaxy10  create_env.md  sync_satori.bash
cannon/: AstroM3Processed2stages.py  AstroM3photometry.py  AstroM3spectra.py  AstroM3spectra2stages.py  AstroM3spectraMAE.py  AstroM3spectraMAE2stages.py  AstroM3spectraVAE2stages.py  Galaxy10img.py  Galaxy10imgMAE.py  Galaxy10imgVAE.py  Goldsteinphotospectra2stages.py  Plasticc_photometry.py  Soarphoto2spectra.py  Soarphotospectra2stages.py  TESS_classifier.py  ZTFimg.py  ZTFimg.sh  ZTFphotometry.py  ZTFphotometryMAE.py  ZTFphotometryVAE.py  ZTFphotospectra.py  ZTFphotospectra2stages.py  ZTFphotospectra_simple_concat.py  ZTFspectra.py  ZTFspectraMAE.py  ZTFspectraVAE.py  apply_AstroM3photometry.py  apply_AstroM3spectra.py  apply_AstroM3spectra_mae.py  (+21 more)
package/: pyproject.toml
package/daep/: Classifier.py  ImgLayers.py  LitWrapper.py  LitWrapperAll.py  Perceiver.py  PhotometricLayers.py  SpectraLayers.py  contrastive.py  daep.py  data_util.py  diffusion.py  flow.py  imageMAE.py  mae.py  mmd.py  plot_util.py  probing.py  tokenizers.py  util_layers.py
package/daep/datasets/: GALAHspectra_dataset.py  TESSGALAHspeclc_dataset.py  TESSlightcurve_dataset.py  dataloaders.py
package/daep/pipelines/: testing.py  testing_classifier.py  training.py  training_classifier.py
package/daep/pipelines/configs/: config_classifier_default.yaml  config_reconstruction_default.yaml
package/daep/utils/: general_utils.py  plot_utils.py  test_callbacks.py  test_utils.py  train_utils.py
package/pdae/: diffusion.py  mmd.py
(+46 files in other folders)
