[project]
name = "daep"
version = "0.0.1"
dependencies = []
description = "diffusive autoencoder with perceiver "
authors = [
    { name="Yunyi Shen", email="yshen99@mit.edu" }
]
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["daep"]
